# icp-hello-world-rust

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  canister_url.sh  dfx.json  package-lock.json  package.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build.sh  canister_url.sh
src/backend/: Cargo.toml
src/backend/tests/: integration_tests.rs
src/frontend/: package.json
src/icp_hello_world_rust_backend/: Cargo.toml
src/icp_hello_world_rust_backend/src/: lib.rs
src/icp_hello_world_rust_backend/tests/: integration_tests.rs
src/icp_hello_world_rust_frontend/src/: index.html  index.js
